# conjugate-gradient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh  main.cpp
